<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@color/colorEveryWhereInApp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/colorEveryWhereInApp"
            android:text="@string/send_button_fab"/>
        <Button
            android:id="@+id/receive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/colorEveryWhereInApp"
            android:text= "@string/receive_butto_fab"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/transfer_history_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/transfer_history"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/text_stream"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="SEND TEXT STREAM"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorEveryWhereInApp"/>
    </LinearLayout>
</LinearLayout>